Fix: Correction URL PostgreSQL avec encode password %2F

--- a/render.yaml
+++ b/render.yaml
@@ -7,8 +7,12 @@ services:
     dockerfilePath: ./Dockerfile
     envVars:
       - key: SPRING_DATASOURCE_URL
-        value: jdbc:postgresql://postgres:yasmine2026/projet@db.ahavhwdridkzubwtjmuu.supabase.co:5432/postgres
+        value: jdbc:postgresql://postgres:yasmine2026%2Fprojet@db.ahavhwdridkzubwtjmuu.supabase.co:5432/postgres
       - key: SPRING_DATASOURCE_USERNAME
         value: postgres
       - key: SPRING_DATASOURCE_PASSWORD
         value: yasmine2026/projet
+      - key: JWT_SECRET
+        generateValue: true
+      - key: PORT
+        value: 10000
