--- a/render.yaml
+++ b/render.yaml
@@ -8,10 +8,7 @@ services:
     envVars:
       - key: SPRING_DATASOURCE_URL
         value: jdbc:postgresql://postgres:yasmine2026%2Fprojet@db.ahavhwdridkzubwtjmuu.supabase.co:5432/postgres
-      - key: SPRING_DATASOURCE_USERNAME
-        value: postgres
-      - key: SPRING_DATASOURCE_PASSWORD
-        value: yasmine2026/projet
+      # Remove SPRING_DATASOURCE_USERNAME and SPRING_DATASOURCE_PASSWORD entirely
       - key: JWT_SECRET
         generateValue: true
       - key: PORT
