--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ services:
     dockerfilePath: ./Dockerfile
     envVars:
       - key: SPRING_DATASOURCE_URL
-        value: jdbc:postgresql://postgres:yasmine2026projet@db.ahavhwdridkzubwtjmuu.supabase.co:5432/postgres
+        value: jdbc:postgresql://db.ahavhwdridkzubwtjmuu.supabase.co:5432/postgres
       - key: SPRING_DATASOURCE_USERNAME
         value: postgres
       - key: SPRING_DATASOURCE_PASSWORD
@@ -16,3 +16,5 @@ services:
         generateValue: true
       - key: PORT
         value: 10000
+      - key: SPRING_PROFILES_ACTIVE
+        value: production
