Fix: Remove French accents from JWT secret to fix Maven encoding issue

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
         <jwt.version>0.11.5</jwt.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <lombok.version>1.18.32</lombok.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
     <dependencies>
@@ -140,6 +142,14 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.3.1</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
             <!-- Compiler Plugin avec annotation processors -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
