--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -2,13 +2,13 @@
 spring.application.name=conges-backend
 server.port=${PORT:10000}
 
-# Database PostgreSQL - Utilise les variables d'environnement
+# Database PostgreSQL
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Pour désactiver SSL temporairement (pour debug)
+# Pour desactiver SSL temporairement (pour debug)
 spring.datasource.hikari.data-source-properties.sslmode=disable
 
 # JPA/Hibernate
@@ -18,7 +18,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-# Configuration spéciale pour transaction pooler
+# Configuration speciale pour transaction pooler
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 # JWT Configuration
