--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.conges.CongesBackendApplication</mainClass>
+                </configuration>
             </plugin>
 
         </plugins>
