--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,14 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- GreenMail for testing emails -->
+        <dependency>
+            <groupId>com.icegreen</groupId>
+            <artifactId>greenmail</artifactId>
+            <version>2.0.0</version>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- Pour le développement/test -->
         <dependency>
             <groupId>com.h2database</groupId>
